DAQ-4442 Expose SquashingExcluder to Mapping tests
- Allow empty ScanRegions to be passed to Jython as SquashingExcluders
- Can be used in tests to flatten grid scans as Malcolm does without
  applying a roi and losing points

Change-Id: I95f405dfcd8339b4a9487add02f23654a00c327d